# aibot_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: LedCtrl.msg  MotorCtrl.msg  Oled.msg  PinMode.msg  PinValue.msg  Platform.msg  ServoCtrl.msg
